# midas-journal-786

./: CMakeLists.txt
Data/: cthead1.mha  engine.mha
Source/: CMakeLists.txt  itkSimpleBinaryPixelMathImageFilter.h  itkSimpleDistanceMapImageFilter.h  itkSimpleGradientImageFilter.h  itkSimpleGradientMagnitudeImageFilter.h  itkSimpleImageToImageMetric.h  itkSimpleInterpolateImageFunction.h  itkSimpleMorphologyImageFilter.h  itkSimpleOptimizer.h  itkSimpleProjectionImageFilter.h  itkSimpleSmoothImageFilter.h  itkSimpleThresholdImageFilter.h  itkSimpleTransform.h  itkSimpleUnaryPixelMathImageFilter.h  itkStrategyCommand.h  itkStrategyFactory.h  itkStrategyFactory.txx  itkTransform.h  itkTransform.txx  main.cxx
Testing/: CMakeLists.txt  StrategyTest01.cxx  StrategyTest02.cxx  StrategyTest03.cxx  StrategyTest04.cxx
